--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,13 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "extends": [
+    "react-app"
+  ],
+  "env": {
+    "jest": true
+  }
+},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -39,6 +41,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
   }
